[package]
name = "nesmulator_core"
version = "0.1.0"
authors = ["aromeroromero"]
edition = "2021"

[dependencies]
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.0"
serde_json = "1.0.79"
typetag = "0.1.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "clock_benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
debug = true